fix: Social icon button and Icon select was not well aligned

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -2049,6 +2049,10 @@ input[type="text"].select2-search__field {
   display: flex;
 }
 
+.customize-control-ast-responsive-slider .components-base-control {
+  width: 100%;
+}
+
 /**
  * Responsive Icons
  */
